Fix: overflow-issue: d-flex instead of row, footer not fixed, page- instead of card-scroll, app min-width

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,8 @@
+#main-wrapper{
+  height: 100vh !important;
+  min-width: 450px;
+  max-width: 100vw !important;
+}
 main {
   color: antiquewhite;
-  &.height{
-    height: 100vh !important;
-  }
 }
